--- a/app/views/to_dos/index.html.erb
+++ b/app/views/to_dos/index.html.erb
@@ -3,7 +3,7 @@
 <% if @show_done %>
   Showing completed items
 <% else %>
-  NOT showing completed items
+  Not showing completed items
 <% end %>
 
 <ol>
